--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 
     <div class="month">
       <ul>
-        <li class="prev">&#10094;</li>
-        <li class="next">&#10095;</li>
+        <li class="prev" onclick="backward()">&#10094;</li>
+        <li class="next" onclick="forward()">&#10095;</li>
         <li><span style="font-size:36px">Hareskov Division Kano Bookning</span></li>
         <li id="month">Januar</li>
         <li id="year"><span style="font-size:18px">1998</span></li>
@@ -33,48 +33,43 @@
     </ul>
     
     <ul class="days">
-      <li><span id="Day1"></span></li>
-      <li><span id="Day2"></span></li>
-      <li><span id="Day3"></span></li>
-      <li><span id="Day4"></span></li>
-      <li><span id="Day5"></span></li>
-      <li><span id="Day6"></span></li>
-      <li><span id="Day7"></span></li>
-      <li><span id="Day8"></span></li>
-      <li><span id="Day9"></span></li>
-      <li><span id="Day10"></span></li>
-      <li><span id="Day11"></span></li>
-      <li><span id="Day12"></span></li>
-      <li><span id="Day13"></span></li>
-      <li><span id="Day14"></span></li>
-      <li><span id="Day15"></span></li>
-      <li><span id="Day16"></span></li>
-      <li><span id="Day17"></span></li>
-      <li><span id="Day18"></span></li>
-      <li><span id="Day19"></span></li>
-      <li><span id="Day20"></span></li>
-      <li><span id="Day21"></span></li>
-      <li><span id="Day22"></span></li>
-      <li><span id="Day23"></span></li>
-      <li><span id="Day24"></span></li>
-      <li><span id="Day25"></span></li>
-      <li><span id="Day26"></span></li>
-      <li><span id="Day27"></span></li>
-      <li><span id="Day28"></span></li>
-      <li><span id="Day29"></span></li>
-      <li><span id="Day30"></span></li>
-      <li><span id="Day31"></span></li>
-      <li><span id="Day32"></span></li>
-      <li><span id="Day33"></span></li>
-      <li><span id="Day34"></span></li>
-      <li><span id="Day35"></span></li>
-      <li><span id="Day36"></span></li>
-      <li><span id="Day37"></span></li>
-      <li><span id="Day38"></span></li>
-      <li><span id="Day39"></span></li>
-      <li><span id="Day40"></span></li>
-      <li><span id="Day41"></span></li>
-      <li><span id="Day42"></span></li>
+      <li onclick="reserver(1)"><span id="Day1"></span></li>
+      <li onclick="reserver(2)"><span id="Day2"></span></li>
+      <li onclick="reserver(3)"><span id="Day3"></span></li>
+      <li onclick="reserver(4)"><span id="Day4"></span></li>
+      <li onclick="reserver(5)"><span id="Day5"></span></li>
+      <li onclick="reserver(6)"><span id="Day6"></span></li>
+      <li onclick="reserver(7)"><span id="Day7"></span></li>
+      <li onclick="reserver(8)"><span id="Day8"></span></li>
+      <li onclick="reserver(9)"><span id="Day9"></span></li>
+      <li onclick="reserver(10)"><span id="Day10"></span></li>
+      <li onclick="reserver(11)"><span id="Day11"></span></li>
+      <li onclick="reserver(12)"><span id="Day12"></span></li>
+      <li onclick="reserver(13)"><span id="Day13"></span></li>
+      <li onclick="reserver(14)"><span id="Day14"></span></li>
+      <li onclick="reserver(15)"><span id="Day15"></span></li>
+      <li onclick="reserver(16)"><span id="Day16"></span></li>
+      <li onclick="reserver(17)"><span id="Day17"></span></li>
+      <li onclick="reserver(18)"><span id="Day18"></span></li>
+      <li onclick="reserver(19)"><span id="Day19"></span></li>
+      <li onclick="reserver(20)"><span id="Day20"></span></li>
+      <li onclick="reserver(21)"><span id="Day21"></span></li>
+      <li onclick="reserver(22)"><span id="Day22"></span></li>
+      <li onclick="reserver(23)"><span id="Day23"></span></li>
+      <li onclick="reserver(24)"><span id="Day24"></span></li>
+      <li onclick="reserver(25)"><span id="Day25"></span></li>
+      <li onclick="reserver(26)"><span id="Day26"></span></li>
+      <li onclick="reserver(27)"><span id="Day27"></span></li>
+      <li onclick="reserver(28)"><span id="Day28"></span></li>
+      <li onclick="reserver(29)"><span id="Day29"></span></li>
+      <li onclick="reserver(30)"><span id="Day30"></span></li>
+      <li onclick="reserver(31)"><span id="Day31"></span></li>
+      <li onclick="reserver(32)"><span id="Day32"></span></li>
+      <li onclick="reserver(33)"><span id="Day33"></span></li>
+      <li onclick="reserver(34)"><span id="Day34"></span></li>
+      <li onclick="reserver(35)"><span id="Day35"></span></li>
+      <li onclick="reserver(36)"><span id="Day36"></span></li>
+      <li onclick="reserver(37)"><span id="Day37"></span></li>
     </ul>
 
 
@@ -85,10 +80,10 @@
     <script>
       const firebaseConfig = {
           apiKey: "AIzaSyCfPEKOi56aanIsKWhaMPjvfXwA_d28nXM",
-          authDomain: "kano-kalender-44ce5.firebaseapp.com",
-          databaseURL: "https://kano-kalender-44ce5-default-rtdb.europe-west1.firebasedatabase.app",
-          projectId: "kano-kalender-44ce5",
-          storageBucket: "kano-kalender-44ce5.appspot.com",
+          authDomain: "hdkanos.firebaseapp.com",
+          databaseURL: "https://hdkanos-default-rtdb.europe-west1.firebasedatabase.app",
+          projectId: "hdkanos",
+          storageBucket: "hdkanos.appspot.com",
           messagingSenderId: "361845659163",
           appId: "1:361845659163:web:18fc9613fb8c76b72ccabe",
           measurementId: "G-4M1C25VHRE"
