--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hareskov Division Kano Bookning</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMN2kh4KwmD1Hab5ttvCOJr3GrkfZicX-njw&s">
 
 
     <style>
